<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:background="?attr/backgroundcolor">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/user_preferences"
            android:textColor="?attr/textcolor"
            android:textSize="@dimen/textSize50sp"
            android:paddingLeft="@dimen/padding20dp"
            android:fontFamily="@font/dalelands_font"
            android:layout_margin="@dimen/padding20dp"/>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/size10dp"
            app:cardBackgroundColor="?attr/cardbackground"
            android:layout_marginLeft="@dimen/size10dp"
            android:layout_marginRight="@dimen/size10dp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/size40dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/switch_light_dark"
            android:textColor="@color/colorPrimary"
            android:layout_margin="@dimen/padding20dp"
            android:textSize="@dimen/textSize30sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:layout_gravity="center_horizontal"/>
        <Switch
            android:id="@+id/nightSwitch"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/night_mode"
            android:textColor="?attr/textcolor"
            android:textSize="@dimen/textSize20sp"
            android:layout_margin="@dimen/padding20dp"
            android:layout_gravity="center_horizontal"/>

            </LinearLayout>


        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/size10dp"
            app:cardBackgroundColor="?attr/cardbackground"
            android:layout_marginLeft="@dimen/size10dp"
            android:layout_marginRight="@dimen/size10dp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/size40dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_classes_to_display"
            android:textColor="@color/colorPrimary"
            android:layout_margin="@dimen/padding20dp"
            android:textSize="@dimen/textSize30sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:layout_gravity="center_horizontal"/>

        <ToggleButton
            android:id="@+id/toggleBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textOn="@string/pathfinder_classes"
            android:textOff="@string/dungeons_and_dragons_classes"
            android:layout_margin="@dimen/padding20dp"
            android:layout_gravity="center_horizontal"
            android:textSize="@dimen/textSize20sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textTest" />

        </LinearLayout>


        </android.support.v7.widget.CardView>

    </LinearLayout>

</FrameLayout>