<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="?attr/backgroundcolor"
    android:scrollbars="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/dalelands_font"
            android:paddingLeft="@dimen/padding20dp"
            android:text="@string/character_creator"
            android:textColor="?attr/textcolor"
            android:textSize="@dimen/text40sp"
            android:layout_margin="@dimen/padding20dp"/>

        <android.support.v7.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/size10dp"
            app:cardBackgroundColor="?attr/cardbackground"
            android:layout_marginLeft="@dimen/size10dp"
            android:layout_marginRight="@dimen/size10dp">

            <android.support.v7.widget.GridLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:columnCount="3"
                app:useDefaultMargins="true">

                <TextView
                    android:id="@+id/txtName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/size40dp"
                    android:paddingTop="@dimen/padding20dp"
                    android:text="@string/enter_character_name"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/textSize30sp"
                    android:textStyle="bold"
                    app:layout_column="0"
                    app:layout_row="1" />

                <EditText
                    android:id="@+id/entName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/name"
                    android:inputType="textPersonName"
                    android:paddingLeft="@dimen/padding20dp"
                    android:paddingTop="@dimen/padding20dp"
                    android:textColor="?attr/textcolor"
                    android:textColorHint="?attr/textcolor"
                    android:textSize="@dimen/textSize20sp"
                    app:layout_column="1"
                    app:layout_gravity="fill_horizontal"
                    app:layout_row="1" />

                <TextView
                    android:id="@+id/txtRace"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/size40dp"
                    android:paddingTop="@dimen/padding20dp"
                    android:text="@string/choose_race"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/textSize30sp"
                    android:textStyle="bold"
                    app:layout_column="0"
                    app:layout_row="2" />

                <Spinner
                    android:id="@+id/raceSpinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_accordian"
                    app:layout_column="1"
                    app:layout_row="2" />

                <TextView
                    android:id="@+id/txtClass"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/size40dp"
                    android:paddingTop="@dimen/padding20dp"
                    android:text="@string/choose_class"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/textSize30sp"
                    android:textStyle="bold"
                    app:layout_column="0"
                    app:layout_row="3" />

                <Spinner
                    android:id="@+id/classSpinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_accordian"
                    app:layout_column="1"
                    app:layout_row="3" />

                <Button
                    android:id="@+id/addChar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/size40dp"
                    android:background="@drawable/rounded_button"
                    android:onClick="btnAddChar"
                    android:padding="@dimen/size10dp"
                    android:text="@string/enter_character"
                    android:textColor="?attr/textcolor"
                    app:layout_column="1"
                    app:layout_row="4"
                    android:layout_marginBottom="@dimen/size10dp"/>

                <Button
                    android:id="@+id/btnViewData"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/size40dp"
                    android:layout_marginTop="@dimen/size40dp"
                    android:background="@drawable/rounded_button"
                    android:padding="@dimen/size10dp"
                    android:text="@string/view_data"
                    android:textColor="?attr/textcolor"
                    app:layout_column="2"
                    app:layout_row="4"
                    android:layout_marginBottom="@dimen/size10dp"/>

            </android.support.v7.widget.GridLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/size10dp"
            app:cardBackgroundColor="?attr/cardbackground"
            android:layout_marginLeft="@dimen/size10dp"
            android:layout_marginRight="@dimen/size10dp"
            android:layout_marginTop="@dimen/size10dp">

            <android.support.v7.widget.GridLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:columnCount="3"
                app:useDefaultMargins="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/size40dp"
                    android:paddingTop="@dimen/padding20dp"
                    android:paddingRight="@dimen/padding20dp"
                    android:text="@string/to_update"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/textSize20sp"
                    android:textStyle="bold"
                    app:layout_columnSpan="3"
                    app:layout_column="0"
                    app:layout_row="0"
                    />

                <EditText
                    android:id="@+id/entId"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/size200dp"
                    android:layout_marginTop="@dimen/size10dp"
                    android:hint="@string/enter_id_to_update_character"
                    android:inputType="number"
                    android:paddingTop="@dimen/padding20dp"
                    android:textColor="?attr/textcolor"
                    android:textColorHint="?attr/textcolor"
                    app:layout_column="0"
                    app:layout_row="1" />

                <Button
                    android:id="@+id/btnUpdate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/size10dp"
                    android:layout_marginLeft="@dimen/size40dp"
                    android:background="@drawable/rounded_button"
                    android:padding="@dimen/size10dp"
                    android:text="@string/update_data"
                    android:textColor="?attr/textcolor"
                    app:layout_column="1"
                    app:layout_row="1"
                    android:layout_marginBottom="@dimen/size10dp"/>

                <Button
                    android:id="@+id/btnDel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/size80dp"
                    android:layout_marginTop="@dimen/size10dp"
                    android:background="@drawable/rounded_button"
                    android:padding="@dimen/size10dp"
                    android:text="@string/delete_character"
                    android:textColor="?attr/textcolor"
                    app:layout_column="2"
                    app:layout_row="1"
                    android:layout_marginBottom="@dimen/size10dp"/>

            </android.support.v7.widget.GridLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/size10dp"
            app:cardBackgroundColor="?attr/cardbackground"
            android:layout_marginLeft="@dimen/size10dp"
            android:layout_marginRight="@dimen/size10dp"
            android:layout_marginTop="@dimen/size10dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <android.support.v7.widget.GridLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:columnCount="3"
                app:useDefaultMargins="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/size40dp"
                    android:paddingTop="@dimen/padding20dp"
                    android:paddingRight="@dimen/padding20dp"
                    android:text="@string/find_characters_by_class_or_by_race"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/textSize20sp"
                    android:textStyle="bold"
                    app:layout_columnSpan="3"
                    app:layout_column="0"
                    app:layout_row="0"
                    />

                <Spinner
                    android:id="@+id/findClass"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/size200dp"
                    android:layout_marginTop="@dimen/size40dp"
                    android:background="@drawable/rounded_accordian"
                    app:layout_column="1"
                    app:layout_row="1" />

                <Button
                    android:id="@+id/btnFindClass"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/size40dp"
                    android:background="@drawable/rounded_button"
                    android:padding="@dimen/size10dp"
                    android:text="@string/find_class"
                    android:textColor="?attr/textcolor"
                    app:layout_column="2"
                    app:layout_row="1" />

                <Spinner
                    android:id="@+id/findRace"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/size200dp"
                    android:layout_marginTop="@dimen/size40dp"
                    android:background="@drawable/rounded_accordian"
                    app:layout_column="1"
                    app:layout_row="2" />

                <Button
                    android:id="@+id/btnFindRace"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/size40dp"
                    android:background="@drawable/rounded_button"
                    android:padding="@dimen/size10dp"
                    android:text="@string/find_race"
                    android:textColor="?attr/textcolor"
                    app:layout_column="2"
                    app:layout_row="2" />

            </android.support.v7.widget.GridLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/paraQueries"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/textSize20sp"
                    android:paddingLeft="@dimen/size40dp"
                    android:layout_marginTop="@dimen/padding20dp"/>

            </LinearLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>

</FrameLayout>